--- a/Pages/admin_login.html
+++ b/Pages/admin_login.html
@@ -31,7 +31,7 @@
             </div>
             <div class="login-btn">
                 <div class="login-btn-green">
-                    <a href="#">Login</a>
+                    <a href="/index.htm">Login</a>
                 </div>
             </div>
                     
