--- a/index.htm
+++ b/index.htm
@@ -11,12 +11,15 @@
     <script src="https://kit.fontawesome.com/ba80ca1c79.js" crossorigin="anonymous"></script>
     <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Avenir">
-    <title>Lancer Point | Admin Panel</title>
+    <title>Lancer Point | Admin Panel INBOX</title>
+    
 </head>
 <body>
     <div class="navigation">
         <div class="navigation__logo-box">
-            <img src="images/logos/1615836166736_lanserpoint-point-long.png" alt="Lancer point logo" class="navigation__logo"/>
+            <a href="pages/Dashboard.html">
+                <img src="images/logos/1615836166736_lanserpoint-point-long.png" alt="Lancer point logo" class="navigation__logo"/>
+            </a>
         </div>
 
         <div class="navigation__search-box">
@@ -39,37 +42,37 @@
       <aside class="aside">
             <nav class="asiide__nav">
                 <ul class="aside__list">
-                    <li class="aside__item active">
-                        <i class="fas fa-chart-area aside__icon icon"></i>
-                        <a href="#" class="aside__link">Dashboard</a>
-                    </li>
                     <li class="aside__item">
+                        <i class="fas fa-chart-area aside__icon icon"></i>
+                        <a href="pages/Dashboard.html" class="aside__link">Dashboard</a>
+                    </li>
+                    <li class="aside__item active">
                         <i class="far fa-envelope aside__icon icon"></i>
-                        <a href="#" class="aside__link">Inbox</a>
+                        <a href="index.htm" class="aside__link">Inbox</a>
                     </li>
                     <li class="aside__item">
                         <i class="fas fa-tasks aside__icon icon"></i>
-                        <a href="#" class="aside__link">Project management</a>
+                        <a href="pages/Project_management.htm" class="aside__link">Project management</a>
                     </li>
                     <li class="aside__item">
                         <i class="fas fa-users-cog aside__icon icon"></i>
-                        <a href="#" class="aside__link">Account management</a>
+                        <a href="pages/admin-account__management.html" class="aside__link">Account management</a>
                     </li>
                     <li class="aside__item">
                         <i class="far fa-comments aside__icon icon"></i>
-                        <a href="#" class="aside__link">C.M.S</a>
+                        <a href="pages/CMS.html" class="aside__link">C.M.S</a>
                     </li>
                     <li class="aside__item">
                         <i class="far fa-calendar-alt aside__icon icon"></i>
-                        <a href="#" class="aside__link">Categories and subcategories</a>
+                        <a href="pages/admin_new_category.html" class="aside__link">Categories and subcategories</a>
                     </li>
                     <li class="aside__item">
                         <i class="fas fa-cogs aside__icon icon"></i>
-                        <a href="#" class="aside__link">Skill management</a>
+                        <a href="pages/Skills-management.html" class="aside__link">Skill management</a>
                     </li>
                     <li class="aside__item">
                         <i class="fas fa-cog aside__icon icon"></i>
-                        <a href="#" class="aside__link">Settings</a>
+                        <a href="pages/settings.htm" class="aside__link">Settings</a>
                     </li>
                 </ul>
             </nav>
@@ -81,7 +84,7 @@
             </div>
             <div class="inbox-stats">
                 <div class="inbox-stats__compose">
-                    <a href="#">Compose</a>
+                    <a href="./pages/admin__inbox_compose.html">Compose</a>
                 </div>
                 <div class="inbox-stats_count">
                     <div class="dashboard_notifier">
