--- a/index.htm
+++ b/index.htm
@@ -42,37 +42,53 @@
       <aside class="aside">
             <nav class="asiide__nav">
                 <ul class="aside__list">
-                    <li class="aside__item">
-                        <i class="fas fa-chart-area aside__icon icon"></i>
-                        <a href="pages/Dashboard.html" class="aside__link">Dashboard</a>
+                    <li class="aside__item ">
+                        <a href="pages/Dashboard.html">
+                          <i class="fas fa-chart-area aside__icon icon"></i>
+                          <p class="aside__link">Dashboard</p>
+                        </a>
                     </li>
                     <li class="aside__item active">
-                        <i class="far fa-envelope aside__icon icon"></i>
-                        <a href="index.htm" class="aside__link">Inbox</a>
+                        <a href="index.htm">
+                          <i class="far fa-envelope aside__icon icon"></i>
+                        <p class="aside__link">Inbox</p>
+                        </a>
+                    </li>
+                    <li class="aside__item ">
+                        <a href="pages/Project_management.htm">
+                          <i class="fas fa-tasks aside__icon icon"></i>
+                          <p class="aside__link">Project management</p>
+                        </a>
                     </li>
                     <li class="aside__item">
-                        <i class="fas fa-tasks aside__icon icon"></i>
-                        <a href="pages/Project_management.htm" class="aside__link">Project management</a>
+                        <a href="pages/Account_management.htm">
+                          <i class="fas fa-users-cog aside__icon icon"></i>
+                          <p class="aside__link">Account management</p>
+                        </a>
                     </li>
                     <li class="aside__item">
-                        <i class="fas fa-users-cog aside__icon icon"></i>
-                        <a href="pages/admin-account__management.html" class="aside__link">Account management</a>
+                        <a href="pages/CMS.html">
+                          <i class="far fa-comments aside__icon icon"></i>
+                          <p class="aside__link">C.M.S</p>
+                        </a>
                     </li>
                     <li class="aside__item">
-                        <i class="far fa-comments aside__icon icon"></i>
-                        <a href="pages/CMS.html" class="aside__link">C.M.S</a>
+                        <a href="pages/Categories.htm">
+                          <i class="far fa-calendar-alt aside__icon icon"></i>
+                          <p class="aside__link">Categories and subcategories</p>
+                        </a>
                     </li>
                     <li class="aside__item">
-                        <i class="far fa-calendar-alt aside__icon icon"></i>
-                        <a href="pages/admin_new_category.html" class="aside__link">Categories and subcategories</a>
+                        <a href="pages/Skills-management.html">
+                          <i class="fas fa-cogs aside__icon icon"></i>
+                          <p class="aside__link">Skill management</p>
+                        </a>
                     </li>
                     <li class="aside__item">
-                        <i class="fas fa-cogs aside__icon icon"></i>
-                        <a href="pages/Skills-management.html" class="aside__link">Skill management</a>
-                    </li>
-                    <li class="aside__item">
-                        <i class="fas fa-cog aside__icon icon"></i>
-                        <a href="pages/settings.htm" class="aside__link">Settings</a>
+                        <a href="pages/settings.htm">
+                          <i class="fas fa-cog aside__icon icon"></i>
+                          <p class="aside__link">Settings</p>
+                        </a>
                     </li>
                 </ul>
             </nav>
