--- a/pages/Project_management.htm
+++ b/pages/Project_management.htm
@@ -40,36 +40,52 @@
             <nav class="asiide__nav">
               <ul class="aside__list">
                 <li class="aside__item ">
-                    <i class="fas fa-chart-area aside__icon icon"></i>
-                    <a href="Dashboard.html" class="aside__link">Dashboard</a>
+                    <a href="Dashboard.html">
+                      <i class="fas fa-chart-area aside__icon icon"></i>
+                      <p class="aside__link">Dashboard</p>
+                    </a>
                 </li>
                 <li class="aside__item ">
-                    <i class="far fa-envelope aside__icon icon"></i>
-                    <a href="../index.htm" class="aside__link">Inbox</a>
+                    <a href="../index.htm">
+                      <i class="far fa-envelope aside__icon icon"></i>
+                    <p class="aside__link">Inbox</p>
+                    </a>
                 </li>
                 <li class="aside__item active">
-                    <i class="fas fa-tasks aside__icon icon"></i>
-                    <a href="Project_management.htm" class="aside__link">Project management</a>
+                    <a href="Project_management.htm">
+                      <i class="fas fa-tasks aside__icon icon"></i>
+                      <p class="aside__link">Project management</p>
+                    </a>
                 </li>
                 <li class="aside__item">
-                    <i class="fas fa-users-cog aside__icon icon"></i>
-                    <a href="Account_management.htm" class="aside__link">Account management</a>
+                    <a href="Account_management.htm">
+                      <i class="fas fa-users-cog aside__icon icon"></i>
+                      <p class="aside__link">Account management</p>
+                    </a>
                 </li>
                 <li class="aside__item">
-                    <i class="far fa-comments aside__icon icon"></i>
-                    <a href="CMS.html" class="aside__link">C.M.S</a>
+                    <a href="CMS.html">
+                      <i class="far fa-comments aside__icon icon"></i>
+                      <p class="aside__link">C.M.S</p>
+                    </a>
                 </li>
                 <li class="aside__item">
-                    <i class="far fa-calendar-alt aside__icon icon"></i>
-                    <a href="Categories.htm" class="aside__link">Categories and subcategories</a>
+                    <a href="Categories.htm">
+                      <i class="far fa-calendar-alt aside__icon icon"></i>
+                      <p class="aside__link">Categories and subcategories</p>
+                    </a>
                 </li>
                 <li class="aside__item">
-                    <i class="fas fa-cogs aside__icon icon"></i>
-                    <a href="Skills-management.html" class="aside__link">Skill management</a>
+                    <a href="Skills-management.html">
+                      <i class="fas fa-cogs aside__icon icon"></i>
+                      <p class="aside__link">Skill management</p>
+                    </a>
                 </li>
                 <li class="aside__item">
-                    <i class="fas fa-cog aside__icon icon"></i>
-                    <a href="settings.htm" class="aside__link">Settings</a>
+                    <a href="settings.htm">
+                      <i class="fas fa-cog aside__icon icon"></i>
+                      <p class="aside__link">Settings</p>
+                    </a>
                 </li>
               </ul>
 
