--- a/pages/CMS-Content-2.html
+++ b/pages/CMS-Content-2.html
@@ -43,7 +43,7 @@
               <div class="title-container">
                   <h1>Title</h1>
 
-                  <p>This is going to be an amazing article but it is not good for SEO</p>
+                  <input class="title-input" type="text" placeholder="This is going to be an amazing article but it is not good for SEO">
                   <div class="dpp-container">
                     <a class="delete" href="">Delete...</a>
                     <button class="preview">Preview</button>
