--- a/pages/CMS-Content-Email-2.html
+++ b/pages/CMS-Content-Email-2.html
@@ -43,7 +43,7 @@
               <div class="title-container">
                   <h1>Title</h1>
 
-                  <p>Welcome to Lancerpoint</p>
+                  <input class="title-input" type="text" placeholder="Welcome to Lancerpoint">
                   
               </div>
 
